--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -18,7 +18,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     
     {% if settings.dgShowFileTree !== true %}
       {%include "components/navbar.njk"%}
-    {%else%}
+    {% else %}
       {%include "components/filetree.njk"%}
     {% endif %}
 
@@ -27,10 +27,13 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     {% endif %}
 
     <main class="content cm-s-obsidian {{contentClasses}}">
-      <header>
+      <header class="content-header">
         {% if settings.dgShowInlineTitle === true %}
-          <h1 data-note-icon="{% if noteIcon %}{{noteIcon}}{% else %}{{meta.noteIconsSettings.default}}{% endif %}">{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}</h1>
+          <h1 data-note-icon="{% if noteIcon %}{{noteIcon}}{% else %}{{meta.noteIconsSettings.default}}{% endif %}">
+            {% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}
+          </h1>
         {% endif %}
+
         <div class="header-meta">
           {% if settings.dgShowTags === true and tags %}
             <div class="header-tags">
@@ -43,31 +46,44 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
               {% endfor %}
             </div>
           {% endif %}
+          
           {%- if meta.timestampSettings.showCreated or meta.timestampSettings.showUpdated -%}
-          <div class="timestamps">
-            {%- if meta.timestampSettings.showCreated and created -%}
-            <div><i icon-name="calendar-plus"></i> <span class="human-date" data-date="{{created}}"></span></div>
-            {%- endif -%}
-            {%- if meta.timestampSettings.showUpdated and updated -%}
-            <div><i icon-name="calendar-clock"></i> <span class="human-date" data-date="{{updated}}"></span></div>
-            {%- endif -%}
-          </div>
+            <div class="timestamps">
+              {%- if meta.timestampSettings.showCreated and created -%}
+                <div class="timestamp-item">
+                  <i icon-name="calendar-plus"></i>
+                  <span class="human-date" data-date="{{created}}"></span>
+                </div>
+              {%- endif -%}
+              {%- if meta.timestampSettings.showUpdated and updated -%}
+                <div class="timestamp-item">
+                  <i icon-name="calendar-clock"></i>
+                  <span class="human-date" data-date="{{updated}}"></span>
+                </div>
+              {%- endif -%}
+            </div>
           {%- endif -%}
         </div>
-      {% for imp in dynamics.common.header %}
-        {% include imp %}
-      {% endfor %}
-      {% for imp in dynamics.notes.header %}
-        {% include imp %}
-      {% endfor %}
+        
+        {% for imp in dynamics.common.header %}
+          {% include imp %}
+        {% endfor %}
+        {% for imp in dynamics.notes.header %}
+          {% include imp %}
+        {% endfor %}
       </header>
+      
       {% for imp in dynamics.common.beforeContent %}
         {% include imp %}
       {% endfor %}
       {% for imp in dynamics.notes.beforeContent %}
         {% include imp %}
       {% endfor %}
-      {{ content | hideDataview | taggify | link | safe}}
+      
+      <article class="content-body">
+        {{ content | hideDataview | taggify | link | safe}}
+      </article>
+      
       {% for imp in dynamics.common.afterContent %}
         {% include imp %}
       {% endfor %}
@@ -76,21 +92,22 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       {% endfor %}
     </main>
 
-    {% if settings.dgShowBacklinks === true or settings.dgShowLocalGraph === true or settings.dgShowToc === true%}
-      {%include "components/sidebar.njk"%}
-    {% endif %}
+    {%include "components/sidebar.njk"%}
 
     {% if settings.dgLinkPreview === true %}
       {%include "components/linkPreview.njk"%}
     {% endif %}
+    
     {% include "components/references.njk" %}
     {% include "components/timestamps.njk" %}
+    
     {% for imp in dynamics.common.footer %}
       {% include imp %}
     {% endfor %}
     {% for imp in dynamics.notes.footer %}
       {% include imp %}
     {% endfor %}
+    
     {%include "components/lucideIcons.njk"%}
   </body>
 </html>
