--- a/src/site/_includes/components/linkPreview.njk
+++ b/src/site/_includes/components/linkPreview.njk
@@ -82,9 +82,10 @@
             if (url.indexOf("#") != -1) {
               let id = url.split('#')[1];
               const focus = tooltipWrapper.querySelector(`[id='${id}']`);
-              focus.classList.add('referred');
-              console.log(focus);
-              focus.scrollIntoView({behavior: 'smooth'}, true)
+              if (focus) {
+                focus.classList.add('referred');
+                focus.scrollIntoView({behavior: 'smooth'}, true);
+              }
             } else {
               tooltipWrapper.scroll(0, 0);
             }
