--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -4,25 +4,60 @@
                   {% for imp in dynamics.sidebar.top %}
                         {% include imp %}
                   {% endfor %}
-                  {%if settings.dgShowLocalGraph === true%}
-                        {%include "components/graphScript.njk"%}
-                  {%endif%}
-
-                  {%if settings.dgShowToc === true%}
-                        {%set tocHtml= (content and (content|toc)) %}
-                        {%if tocHtml %}
-                              <div class="toc">
-                                    <div class="toc-title-container">
-                                          <div class="toc-title">
-                                                On this page
-                                          </div>
-                                    </div>
-                                    <div class="toc-container">
-                                          {{ tocHtml | safe }}
+                  {# Only show filetree in right sidebar if left sidebar filetree is not shown #}
+                  {%if settings.dgShowFileTree !== true%}
+                        <div class="filetree-in-sidebar">
+                              <div class="filetree-title-container">
+                                    <div class="filetree-title">Notes</div>
+                              </div>
+                              <div class="filetree-container">
+                                    {% macro menuItem(fileOrFolderName, fileOrFolder, step, currentPath) %}
+                                          {%if fileOrFolder.isNote or fileOrFolder.isFolder%}
+                                                <div x-show="isOpen" style="display:none" class="{{'filelist' if step>0}}">
+                                                      {%if fileOrFolder.isNote and not fileOrFolder.hide %}
+                                                            <div @click.stop class="notelink {{ 'active-note' if fileOrFolder.permalink === permalink}}">
+                                                                  {%- if not meta.noteIconsSettings.filetree -%}<i icon-name="sticky-note" aria-hidden="true"></i>{%- endif -%}
+                                                                  <a data-note-icon="{{fileOrFolder.noteIcon}}" style="text-decoration: none;" class="filename" href="{{fileOrFolder.permalink}}">{{fileOrFolder.name}} </a>
+                                                            </div>
+                                                      {% elif fileOrFolder.isFolder%}
+                                                            <div class="folder inner-folder"  x-data="{isOpen: $persist(false).as({{currentPath | dump}})}" @click.stop="isOpen=!isOpen">
+                                                                  <div class="foldername-wrapper align-icon">
+                                                                  <i x-show="isOpen" style="display: none;"  icon-name="chevron-down"></i>
+                                                                  <i x-show="!isOpen"  icon-name="chevron-right"></i>
+                                                                  <span class="foldername">{{fileOrFolderName}}</span>
+                                                                  </div>
+                                                                  {% for fileOrFolderName, child in fileOrFolder %}
+                                                                        {{menuItem(fileOrFolderName, child, step+1, (currentPath+"/"+fileOrFolderName))}}
+                                                                  {% endfor %}
+                                                            </div>
+                                                      {% endif %}
+                                                </div>
+                                                {%endif%}
+                                          {% endmacro %}
+                                    <div class="folder" x-data="{isOpen: true}">
+                                          {%- for fileOrFolderName, fileOrFolder in filetree -%}
+                                                {{menuItem(fileOrFolderName, fileOrFolder, 0, fileOrFolderName)}}
+                                          {%- endfor -%}
                                     </div>
                               </div>
-                        {%endif%}
+                        </div>
+                  {%endif%}
+                  {%set tocHtml= (content and (content|toc)) %}
+                  {%if tocHtml %}
+                        <div class="toc">
+                              <div class="toc-title-container">
+                                    <div class="toc-title">
+                                          On this page
+                                    </div>
+                              </div>
+                              <div class="toc-container">
+                                    {{ tocHtml | safe }}
+                              </div>
+                        </div>
+                  {%endif%}
 
+                  {%if settings.dgShowLocalGraph === true%}
+                        {%include "components/graphScript.njk"%}
                   {%endif%}
 
                         {%if settings.dgShowBacklinks === true %}
