--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -12,47 +12,75 @@
   </head>
   <body class="theme-{{meta.baseTheme}} markdown-preview-view markdown-rendered markdown-preview-section {{meta.bodyClasses}}">
     {%include "components/notegrowthhistory.njk"%}
+    
     {% if settings.dgShowFileTree !== true %}
       {%include "components/navbar.njk"%}
-    {%else%}
+    {% else %}
       {%include "components/filetree.njk"%}
     {% endif %}
+
     {% if settings.dgEnableSearch === true %}
       {%include "components/searchContainer.njk"%}
     {% endif %}
-    <main class="content cm-s-obsidian {{contentClasses}}">
-      <header>
-      {% if settings.dgShowInlineTitle === true %}
-        <h1>{{ noteTitle  }}</h1>
-      {% endif %}
 
-      <div class="header-meta">
-        {% if settings.dgShowTags === true and tags %}
-          <div class="header-tags">
-            {% for tag in tags %}
-              {% if tag != 'gardenEntry' and tag !='note' %}
-                <a class="tag" onclick="toggleTagSearch(this)">
-                  #{{tag}}
-                </a>
-              {% endif %}
-            {% endfor %}
-          </div>
+    <main class="content cm-s-obsidian {{contentClasses}}">
+      <header class="content-header">
+        {% if settings.dgShowInlineTitle === true %}
+          <h1 data-note-icon="{% if noteIcon %}{{noteIcon}}{% else %}{{meta.noteIconsSettings.default}}{% endif %}">
+            {% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}
+          </h1>
         {% endif %}
-      </div>
-      {% for imp in dynamics.common.header %}
-        {% include imp %}
-      {% endfor %}
-      {% for imp in dynamics.index.header %}
-        {% include imp %}
-      {% endfor %}
+
+        <div class="header-meta">
+          {% if settings.dgShowTags === true and tags %}
+            <div class="header-tags">
+              {% for tag in tags %}
+                {% if tag != 'gardenEntry' and tag !='note' %}
+                  <a class="tag" onclick="toggleTagSearch(this)">
+                    #{{tag}}
+                  </a>
+                {% endif %}
+              {% endfor %}
+            </div>
+          {% endif %}
+          
+          {%- if meta.timestampSettings.showCreated or meta.timestampSettings.showUpdated -%}
+            <div class="timestamps">
+              {%- if meta.timestampSettings.showCreated and created -%}
+                <div class="timestamp-item">
+                  <i icon-name="calendar-plus"></i>
+                  <span class="human-date" data-date="{{created}}"></span>
+                </div>
+              {%- endif -%}
+              {%- if meta.timestampSettings.showUpdated and updated -%}
+                <div class="timestamp-item">
+                  <i icon-name="calendar-clock"></i>
+                  <span class="human-date" data-date="{{updated}}"></span>
+                </div>
+              {%- endif -%}
+            </div>
+          {%- endif -%}
+        </div>
+        
+        {% for imp in dynamics.common.header %}
+          {% include imp %}
+        {% endfor %}
+        {% for imp in dynamics.index.header %}
+          {% include imp %}
+        {% endfor %}
       </header>
+      
       {% for imp in dynamics.common.beforeContent %}
         {% include imp %}
       {% endfor %}
       {% for imp in dynamics.index.beforeContent %}
         {% include imp %}
       {% endfor %}
-      {{ content | hideDataview | taggify | link | safe}}
+      
+      <article class="content-body">
+        {{ content | hideDataview | taggify | link | safe}}
+      </article>
+      
       {% for imp in dynamics.common.afterContent %}
         {% include imp %}
       {% endfor %}
@@ -61,19 +89,22 @@
       {% endfor %}
     </main>
 
-    {% if settings.dgShowBacklinks === true or settings.dgShowLocalGraph === true or settings.dgShowToc === true%}
-      {%include "components/sidebar.njk" %}
-    {%endif%}
+    {%include "components/sidebar.njk"%}
 
     {% if settings.dgLinkPreview === true %}
       {%include "components/linkPreview.njk"%}
     {% endif %}
+    
+    {% include "components/references.njk" %}
+    {% include "components/timestamps.njk" %}
+    
     {% for imp in dynamics.common.footer %}
       {% include imp %}
     {% endfor %}
     {% for imp in dynamics.index.footer %}
       {% include imp %}
     {% endfor %}
+    
     {%include "components/lucideIcons.njk"%}
-    </body>
-  </html>
+  </body>
+</html>
