--- a/src/site/_includes/components/navbar.njk
+++ b/src/site/_includes/components/navbar.njk
@@ -1,9 +1,26 @@
+{# 
+  Component: Navbar
+  Description: Main navigation bar component with optional home link and search button
+  Props:
+    - settings.dgHomeLink: Show/hide home link
+    - settings.dgEnableSearch: Show/hide search button
+    - settings.dgShowFileTree: If true, shows mobile menu toggle (used in filetree mode)
+#}
 {%if settings.dgHomeLink === true%}
     <nav class="navbar">
         <div class="navbar-inner">
+            {% if settings.dgShowFileTree === true %}
+                <span style="font-size: 1.5rem; margin-right: 10px;" @click="showFilesMobile=!showFilesMobile"><i icon-name="menu"></i></span>
+            {% endif %}
+            {% for imp in dynamics.filetree.beforeTitle %}
+                {% include imp %}
+            {% endfor %}
             <a href="/" style="text-decoration: none;">
                 <h1 style="margin: 15px !important;">{{meta.siteName}}</h1>
             </a>
+            {% for imp in dynamics.filetree.afterTitle %}
+                {% include imp %}
+            {% endfor %}
         </div>
         {% if settings.dgEnableSearch === true%}
             {% include "components/searchButton.njk" %}
