--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -11,29 +11,7 @@
                                     <div class="filetree-title">Notes</div>
                               </div>
                               <div class="filetree-container">
-                                    {% macro menuItem(fileOrFolderName, fileOrFolder, step, currentPath) %}
-                                          {%if fileOrFolder.isNote or fileOrFolder.isFolder%}
-                                                <div x-show="isOpen" style="display:none" class="{{'filelist' if step>0}}">
-                                                      {%if fileOrFolder.isNote and not fileOrFolder.hide %}
-                                                            <div @click.stop class="notelink {{ 'active-note' if fileOrFolder.permalink === permalink}}">
-                                                                  {%- if not meta.noteIconsSettings.filetree -%}<i icon-name="sticky-note" aria-hidden="true"></i>{%- endif -%}
-                                                                  <a data-note-icon="{{fileOrFolder.noteIcon}}" style="text-decoration: none;" class="filename" href="{{fileOrFolder.permalink}}">{{fileOrFolder.name}} </a>
-                                                            </div>
-                                                      {% elif fileOrFolder.isFolder%}
-                                                            <div class="folder inner-folder"  x-data="{isOpen: $persist(false).as({{currentPath | dump}})}" @click.stop="isOpen=!isOpen">
-                                                                  <div class="foldername-wrapper align-icon">
-                                                                  <i x-show="isOpen" style="display: none;"  icon-name="chevron-down"></i>
-                                                                  <i x-show="!isOpen"  icon-name="chevron-right"></i>
-                                                                  <span class="foldername">{{fileOrFolderName}}</span>
-                                                                  </div>
-                                                                  {% for fileOrFolderName, child in fileOrFolder %}
-                                                                        {{menuItem(fileOrFolderName, child, step+1, (currentPath+"/"+fileOrFolderName))}}
-                                                                  {% endfor %}
-                                                            </div>
-                                                      {% endif %}
-                                                </div>
-                                                {%endif%}
-                                          {% endmacro %}
+                                    {% from "components/filetreeMenuItem.njk" import menuItem %}
                                     <div class="folder" x-data="{isOpen: true}">
                                           {%- for fileOrFolderName, fileOrFolder in filetree -%}
                                                 {{menuItem(fileOrFolderName, fileOrFolder, 0, fileOrFolderName)}}
@@ -61,7 +39,6 @@
                   {%endif%}
 
                         {%if settings.dgShowBacklinks === true %}
-                              {%if settings.dgShowBacklinks === true %}
                               <div class="backlinks">
                                     <div class="backlink-title" style="margin: 4px 0 !important;">Pages mentioning this page</div>
                                           <div class="backlink-list">
