--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -106,5 +106,6 @@
     {% endfor %}
     
     {%include "components/lucideIcons.njk"%}
+    {%include "components/vercelAnalytics.njk"%}
   </body>
 </html>
