--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -109,5 +109,6 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     {% endfor %}
     
     {%include "components/lucideIcons.njk"%}
+    {%include "components/vercelAnalytics.njk"%}
   </body>
 </html>
